# fclean

./: LICENSE  README.md  fclean.py  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation-fixes/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW-FIX.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-restructure-package/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-REVIEW.md  02-VERIFICATION.md
.planning/phases/03-tool-test-suite/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-VALIDATION.md  03-VERIFICATION.md
fclean/: __init__.py  cli.py
fclean/generators/: feature.py  validator.py
fclean/templates/: bloc.py  cubit.py  getx.py  riverpod.py
tests/: test_generator.py  test_templates.py  test_utils.py
