[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "fclean"
version = "0.1.0"
description = "Flutter Clean Architecture feature scaffold generator"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
fclean = "fclean.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
pythonpath = ["."]
